--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,8 @@
   background-color: #e9e9eb;
   width: 100%;
   margin: 20px;
+  margin-bottom: 0px;
+  border-radius: 25px;
 }
 
 .app__input__text{
